objects/efaxapp__eFax_General_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>efaxapp__Alert_Email__c</fullName>
        <label>Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>efaxapp__Default_Fax_Number__c</fullName>
        <description>Default Fax Number</description>
        <label>Default Fax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Enable_Auto_Send_Faxes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Auto Send Faxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>efaxapp__Salesforce_User_Password_Token__c</fullName>
        <label>Salesforce User Password + Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Salesforce_Username__c</fullName>
        <label>Salesforce Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eFax General Settings</label>
</CustomObject>